# umami

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  additional_requirements.txt  changelog.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_additional.txt  requirements_develop.txt  run_setup.sh  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: draft-pdf.yml
.gitlab/issue_templates/: bug-report.md
.gitlab/workflow/: gitlab-check-mr.py  (+15 more)
Sandbox/: README.md  plottingFunctions.py  train_umami.ipynb
docs/: DL1r-instructions.md  Dips-instructions.md  Feature_Importance.md  LWTNN-conversion.md  MC-Samples.md  Umami-instructions.md  WO_trained_model.md  development.md  index.md  installation.md  mc-samples.md  plotting_umami.md  preprocessing.md  train-instructions.md
examples/: CADS-PFlow-Training-config.yaml  DL1r-PFlow-Training-config.yaml  Dips-Cond-Att-PFlow-Training-config.yaml  Dips-PFlow-Training-config-ttbar.yaml  Dips-PFlow-Training-config.yaml  PFlow-Preprocessing-DESY.yaml  PFlow-Preprocessing-GNN.yaml  PFlow-Preprocessing-Hits.yaml  PFlow-Preprocessing-hybrid-validation.yaml  PFlow-Preprocessing-taus.yaml  PFlow-Preprocessing-ttbar.yaml  PFlow-Preprocessing.yaml  Preprocessing-parameters-Geneva.yaml  Preprocessing-parameters-UCL.yaml  Preprocessing-parameters.yaml  Preprocessing-settings-DESY.yaml  Preprocessing-settings-Freiburg.yaml  Preprocessing-settings-Geneva.yaml  comparison_dl1.yaml  custom-pdf.py  dumper-evalute-config.yaml  evaluate_comp_taggers.yaml  evalute_comp_taggers.yaml  plot_rocs.py  plotting_eval_config_dips.yaml  plotting_eval_config_dips_ttbar.yaml  plotting_input_vars.yaml  plotting_umami_config_DL1r.yaml  plotting_umami_config_Umami.yaml  plotting_umami_config_dips.yaml  umami-Cond-Att-PFlow-Training-config.yaml  umami-PFlow-Training-config.yaml
paper/: .gitignore  Preprocessing-config.yaml  Preprocessing-parameters.yaml  Preprocessing-samples.yaml  Train-config.yaml  Variables.yaml  codemeta.json  compile_docker.sh  convert_to_umami.py  main.tex  paper.bib  paper.md  tutorial.patch
pipelines/: .coverage-gitlab-ci.yaml  .deployment-gitlab-ci.yaml  .docker-gitlab-ci.yaml  .docs-gitlab-ci.yaml  .integration_test-gitlab-ci.yaml  .linting-gitlab-ci.yaml  .unit_test-gitlab-ci.yaml  gitlab-check-mr.py  gitlab-mr-coverage-api-post.py  gitlab-update-todo.py  label_mapping.yaml
scripts/: check_lwtnn-model.py  check_lwtnn-model_config.yaml  check_lwtnn_model.py  compute_workingpoint.py  conv_lwtnn_model.py  create_lwtnn_vardict.py  create_preprocessing_samples.py  decorate_tagger_values.py  get_kerasfunc2json_converter.sh  process_test_file.py
umami/: __init__.py  develop_preprocessing.py  evaluate_model.py  plot_input_variables.py  plotting-DL1.py  plotting_epoch_performance.py  plotting_umami.py  preprocessing.py  sample_merging.py  tools.py  train.py  train_DL1.py  train_Dips.py  train_Dips_cond_att.py  train_umami.py  validate_dumper.py
(+292 files in other folders)
