[metadata]
name = umami
description = Machine learning based flavour tagging training framework.
version = attr: umami.__version__
keywords = machine learning, flavour tagging
url = https://gitlab.cern.ch/atlas-flavor-tagging-tools/algorithms/umami

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
packages = find:
scripts =
    umami/preprocessing.py
    umami/train.py
    umami/evaluate_model.py
    umami/plotting_umami.py
    umami/plotting_epoch_performance.py
    umami/plot_input_variables.py

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
ignore = E203, E266, W503
max-line-length = 88
select = B,C,E,F,W,T4
darglint-ignore-regex = *

[darglint]
ignore=DAR203, DAR103
docstring_style=numpy
strictness=full
log_level=INFO

[pylint.FORMAT]
max-line-length = 88

[pylint.'MESSAGES CONTROL']
disable = invalid-name,unspecified-encoding,wrong-import-order,logging-fstring-interpolation,no-name-in-module,too-many-arguments,too-many-locals,too-many-lines,no-member,too-many-statements,too-many-branches,too-many-nested-blocks,too-many-instance-attributes,duplicate-code,fixme,too-few-public-methods
