[metadata]
name = umami
description = Machine learning based flavour tagging training framework.
version = attr: umami.__version__
keywords = machine learning, flavour tagging
url = https://gitlab.cern.ch/atlas-flavor-tagging-tools/algorithms/umami

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
install_requires =
    atlas-ftag-tools >= 0.1.10
    atlasify >= 0.8.0
    h5py >= 3.7.0
    matplotlib >= 3.5.1, < 3.5.2
    mlxtend >= 0.19.0
    numpy >= 1.22.0
    pandas >= 1.3.5, < 1.3.6
    puma-hep >= 0.3.0, < 0.3.1
    pydash >= 5.1.0
    pyyaml >= 6.0.1
    ruamel-yaml >= 0.17.21
    scikit-learn >= 1.0.2
    scipy >= 1.10.1
    seaborn >= 0.11.2
    shap >= 0.40.0
    tables >= 3.7.0
    tensorflow >= 2.11.0, < 2.11.1
    tqdm >= 4.62.3
    umami-preprocessing >= 0.0.6
packages = find:
scripts =
    umami/preprocessing.py
    umami/train.py
    umami/evaluate_model.py
    umami/plotting_umami.py
    umami/plotting_epoch_performance.py
    umami/plot_input_variables.py
    umami/sample_merging.py

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
ignore = E203, E266, W503
max-line-length = 88
select = B,C,E,F,W,T4
darglint-ignore-regex = *

[darglint]
ignore=DAR203, DAR103
docstring_style=numpy
strictness=full
log_level=INFO

[pylint.FORMAT]
max-line-length = 88

[pylint.'MESSAGES CONTROL']
disable = no-member,unspecified-encoding,wrong-import-order,no-name-in-module,too-many-arguments,too-many-locals,too-many-lines,too-many-statements,too-many-branches,too-many-nested-blocks,too-many-instance-attributes,duplicate-code,fixme,too-few-public-methods
